[package]
name = "tokio-group"
version = "0.1.0"
edition = "2021"

[dependencies]
affinity = { version = "0.1", optional = true }
futures-util = "0.3"
libc = "0.2"
num_cpus = "1"
spin_on = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[features]
affinity = ["dep:affinity"]
numa-awareness = []
